--- a/painting-manager-vue/package.json
+++ b/painting-manager-vue/package.json
@@ -15,7 +15,7 @@
     "sass": "^1.90.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.9.0-beta.1"
+    "vuetify": "^3.9.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
