--- a/painting-manager-vue/package.json
+++ b/painting-manager-vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.11.0",
+    "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "sass": "^1.90.0",
     "vue": "^3.5.18",
@@ -19,6 +20,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "vite": "^7.1.2"
   }
 }
